--- a/kan's_log_system/src/application/Login.fxml
+++ b/kan's_log_system/src/application/Login.fxml
@@ -9,34 +9,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="392.0" prefWidth="570.0"
-	xmlns="http://javafx.com/javafx/10.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.Controller">
+<BorderPane prefHeight="392.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
 	<center>
-		<AnchorPane prefHeight="392.0" prefWidth="634.0"
-			BorderPane.alignment="CENTER">
+		<AnchorPane prefHeight="392.0" prefWidth="634.0" BorderPane.alignment="CENTER">
 			<children>
-				<Text layoutX="85.0" layoutY="103.0" strokeType="OUTSIDE"
-					strokeWidth="0.0" text="Kan's Log Systems" textAlignment="CENTER"
-					wrappingWidth="414.67225646972656">
+				<Text layoutX="85.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kan's Log System" textAlignment="CENTER" wrappingWidth="414.67225646972656">
 					<font>
 						<Font name="Georgia" size="44.0" />
 					</font>
 				</Text>
-				<TextField id="login_user_id" fx:id="login_user_id"
-					layoutX="156.0" layoutY="184.0" />
-				<PasswordField fx:id="login_password" layoutX="156.0"
-					layoutY="245.0" />
-				<Button layoutX="361.0" layoutY="245.0"
-					mnemonicParsing="false" onAction="#onButtonLogin" text="Login" />
+				<TextField id="login_user_id" fx:id="login_user_id" layoutX="156.0" layoutY="184.0" />
+				<PasswordField fx:id="login_password" layoutX="156.0" layoutY="245.0" />
+				<Button layoutX="361.0" layoutY="245.0" mnemonicParsing="false" onAction="#onButtonLogin" text="Login" />
 				<Label layoutX="155.0" layoutY="167.0" text="userID" />
 				<Label layoutX="158.0" layoutY="228.0" text="password" />
-				<Text layoutX="143.0" layoutY="141.0" strokeType="OUTSIDE"
-					strokeWidth="0.0" text="Please enter a your userID and password " />
-				<Label fx:id="login_error_message" layoutX="158.0"
-					layoutY="277.0" prefHeight="18.0" prefWidth="311.0"
-					textFill="#ee0000" />
+				<Text layoutX="143.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter a your userID and password " />
+				<Label fx:id="login_error_message" layoutX="158.0" layoutY="277.0" prefHeight="18.0" prefWidth="311.0" textFill="#ee0000" />
 			</children>
 		</AnchorPane>
 	</center>
