--- a/kan's_log_system/src/application/Mainmenu.fxml
+++ b/kan's_log_system/src/application/Mainmenu.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="430.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane prefHeight="430.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainmenuController">
    <children>
       <AnchorPane layoutX="173.0" layoutY="3.0" prefHeight="430.0" prefWidth="529.0">
          <children>
-            <Pane fx:id="pane_top" prefHeight="622.0" prefWidth="1130.0" />
+            <Pane fx:id="pane_top" prefHeight="616.0" prefWidth="1130.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="625.0" prefWidth="171.0" style="-fx-background-color: #F0F7FF;">
@@ -46,7 +46,7 @@
                   <Image url="@../../../../../AppData/Local/Temp/icons8_up_24px.png" />
                </image>
             </ImageView>
-            <Button fx:id="btn_top" layoutX="45.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Top" />
+            <Button fx:id="btn_top" layoutX="45.0" layoutY="87.0" mnemonicParsing="false" onAction="#onButtonTop" prefHeight="25.0" prefWidth="126.0" text="Top" />
             <Button fx:id="btn_book" layoutX="45.0" layoutY="235.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Book" />
             <Button fx:id="btn_loan" layoutX="45.0" layoutY="136.0" mnemonicParsing="false" onAction="#onButtonLoan" prefHeight="25.0" prefWidth="126.0" text="Loan" />
             <Button fx:id="btn_movie" layoutX="45.0" layoutY="184.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Movie" />
