--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane fx:id="loanpane" prefHeight="633.0" prefWidth="935.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
    <children>
-      <AnchorPane layoutX="-2.0" prefHeight="82.0" prefWidth="1130.0">
+      <AnchorPane layoutX="-2.0" prefHeight="82.0" prefWidth="1130.0" style="-fx-background-color: #F0F7FF;">
          <children>
             <Text layoutX="56.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loan balance" wrappingWidth="1037.970703125">
                <font>
@@ -38,12 +38,12 @@
                   <Font size="23.0" />
                </font>
             </Text>
-            <Text layoutX="18.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
+            <Text layoutX="18.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
                <font>
                   <Font size="36.0" />
                </font>
             </Text>
-            <Text fx:id="debt_balance" layoutX="49.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
+            <Text fx:id="debt_balance" layoutX="49.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
                <font>
                   <Font size="36.0" />
                </font>
@@ -71,6 +71,7 @@
                   <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
                </image>
             </ImageView>
+            <Text layoutX="27.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="返済金残高" wrappingWidth="146.86883163452148" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="406.0" layoutY="78.0" prefHeight="533.0" prefWidth="724.0">
