--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -22,9 +22,9 @@
                   <Font size="20.0" />
                </font>
             </Text>
-            <ImageView layoutX="23.0" layoutY="33.0">
+            <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="23.0" layoutY="33.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
+                  <Image url="@image/fire_50px.png" />
                </image>
             </ImageView>
          </children>
@@ -68,7 +68,7 @@
             </Text>
             <ImageView fx:id="loanConf" fitHeight="25.0" fitWidth="26.0" layoutX="343.0" layoutY="192.0" onMouseClicked="#onBtnloanconf">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
+                  <Image url="@image/settings_50px.png" />
                </image>
             </ImageView>
             <Text layoutX="27.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="返済金残高" wrappingWidth="146.86883163452148" />
