--- a/kan's_log_system/src/application/Mainmenu.fxml
+++ b/kan's_log_system/src/application/Mainmenu.fxml
@@ -21,29 +21,29 @@
                   <DropShadow />
                </effect>
             </AnchorPane>
-            <ImageView layoutX="11.0" layoutY="136.0">
+            <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="11.0" layoutY="136.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_24px_2.png" />
+                  <Image url="@image/fire_50px.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="10.0" layoutY="182.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_movie_50px_1.png" />
+                  <Image url="@image/movie_50px.png" />
                </image>
             </ImageView>
             <ImageView layoutX="10.0" layoutY="234.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_book_26px_1.png" />
+                  <Image url="@image/book_26px.png" />
                </image>
             </ImageView>
             <ImageView layoutX="10.0" layoutY="286.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_account_26px.png" />
+                  <Image url="@image/account_26px.png" />
                </image>
             </ImageView>
-            <ImageView layoutX="10.0" layoutY="86.0">
+            <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="10.0" layoutY="86.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_up_24px.png" />
+                  <Image url="@image/up_50px.png" />
                </image>
             </ImageView>
             <Button fx:id="btn_top" layoutX="45.0" layoutY="87.0" mnemonicParsing="false" onAction="#onButtonTop" prefHeight="25.0" prefWidth="126.0" text="Top" />
