--- a/kan's_log_system/src/application/Top.fxml
+++ b/kan's_log_system/src/application/Top.fxml
@@ -16,24 +16,24 @@
                   <Font name="Georgia" size="44.0" />
                </font>
             </Text>
-            <Text layoutX="345.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to KLS" textAlignment="CENTER" wrappingWidth="414.67225646972656">
+            <Text layoutX="345.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome" textAlignment="CENTER" wrappingWidth="414.67225646972656">
                <font>
                   <Font name="Arial" size="12.0" />
                </font>
             </Text>
-            <ImageView layoutX="480.0" layoutY="294.0">
+            <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="480.0" layoutY="294.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_24px_2.png" />
+                  <Image url="@image/fire_50px.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="542.0" layoutY="292.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_movie_50px_1.png" />
+                  <Image url="@image/movie_50px.png" />
                </image>
             </ImageView>
             <ImageView layoutX="607.0" layoutY="293.0">
                <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_book_26px_1.png" />
+                  <Image url="@image/book_26px.png" />
                </image>
             </ImageView>
          </children>
