--- a/kan's_log_system/src/application/Moviedetail.fxml
+++ b/kan's_log_system/src/application/Moviedetail.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -42,13 +46,50 @@
       <Text fx:id="txtMovieTheater" layoutX="541.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="theater" wrappingWidth="186.11174467727642" />
       <Text fx:id="txtMovieTicket" layoutX="541.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ticket" wrappingWidth="186.11174467727642" />
       <Text fx:id="txtMovieSeat" layoutX="541.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="seat" wrappingWidth="186.11174467727642" />
-      <Text fx:id="txtMovieTime" layoutX="541.0" layoutY="379.0" strokeType="OUTSIDE" strokeWidth="0.0" text="time" wrappingWidth="186.11174467727642" />
+      <Text fx:id="txtMovieTime" layoutX="541.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="time" wrappingWidth="186.11174467727642" />
       <ImageView fx:id="btnBackMovie" fitHeight="27.0" fitWidth="26.0" layoutX="35.0" layoutY="113.0" onMouseClicked="#onMouseBtnBackMovie" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/back_arrow_32px.png" />
          </image>
       </ImageView>
       <HBox fx:id="hBoxMovieEval" layoutX="534.0" layoutY="401.0" prefHeight="34.0" prefWidth="123.0" />
+      <HBox fx:id="regHBoxMovieEval" prefHeight="34.0" prefWidth="123.0" visible="false" />
       <HBox fx:id="hBoxMoviePop" layoutX="534.0" layoutY="450.0" prefHeight="34.0" prefWidth="123.0" />
+      <HBox fx:id="regHBoxMoviePop" prefHeight="34.0" prefWidth="123.0" visible="false" />
+      <TextField fx:id="regMovieTitle" layoutX="534.0" layoutY="149.0" visible="false" />
+      <DatePicker fx:id="regMovieDate" layoutX="534.0" layoutY="192.0" visible="false" />
+      <ComboBox fx:id="regMobieTheater" layoutX="533.0" layoutY="235.0" prefWidth="150.0" visible="false" />
+      <ComboBox fx:id="regMovieTicket" layoutX="533.0" layoutY="279.0" prefWidth="150.0" visible="false" />
+      <TextField fx:id="regMovieSeat" layoutX="534.0" layoutY="319.0" visible="false" />
+      <TextField fx:id="regMovieTime" layoutX="534.0" layoutY="361.0" visible="false" />
+      <ImageView fx:id="regImageMovie" fitHeight="314.0" fitWidth="222.0" layoutX="35.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+      <ImageView fx:id="upEval" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="406.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@image/arrow_24px.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="dwEval" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="406.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
+         <image>
+            <Image url="@image/arrow_24px.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="upPop" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@image/arrow_24px.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="dePop" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
+         <image>
+            <Image url="@image/arrow_24px.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="btnEditMode" layoutX="71.0" layoutY="114.0" mnemonicParsing="false" onAction="#onBtnEditMode" text="編集" />
+      <Button fx:id="btnReg" layoutX="688.0" layoutY="512.0" mnemonicParsing="false" text="登録" visible="false" />
+      <Button fx:id="btnFileCho" layoutX="193.0" layoutY="480.0" mnemonicParsing="false" onAction="#onBtnFileCho" text="画像選択" visible="false" />
+      <ImageView fx:id="btnBackEditMode" fitHeight="27.0" fitWidth="26.0" layoutX="35.0" layoutY="113.0" onMouseClicked="#onMouseBtnBackEditMode" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@image/back_arrow_32px.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
