--- a/kan's_log_system/src/application/Moviedetail.fxml
+++ b/kan's_log_system/src/application/Moviedetail.fxml
@@ -83,7 +83,7 @@
             <Image url="@image/arrow_24px.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnReg" layoutX="688.0" layoutY="512.0" mnemonicParsing="false" text="登録" visible="false" />
+      <Button fx:id="btnReg" layoutX="688.0" layoutY="512.0" mnemonicParsing="false" onAction="#onBtnReg" text="登録" visible="false" />
       <Button fx:id="btnFileCho" layoutX="193.0" layoutY="480.0" mnemonicParsing="false" onAction="#onBtnFileCho" text="画像選択" visible="false" />
       <ImageView fx:id="btnBackEditMode" fitHeight="27.0" fitWidth="26.0" layoutX="35.0" layoutY="113.0" onMouseClicked="#onMouseBtnBackEditMode" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
