--- a/kan's_log_system/src/application/Movie.fxml
+++ b/kan's_log_system/src/application/Movie.fxml
@@ -50,5 +50,10 @@
             <Image url="@image/arrow_24px.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="addMovie" fitHeight="20.0" fitWidth="20.0" layoutX="186.0" layoutY="121.0" onDragDetected="#onAddMovie" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/add_50px.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
