--- a/kan's_log_system/src/application/Book.fxml
+++ b/kan's_log_system/src/application/Book.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.web.HTMLEditor?>
+<?import javafx.scene.web.WebView?>
 
 <AnchorPane fx:id="moviepane" prefHeight="633.0" prefWidth="935.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BookController">
    <children>
@@ -25,16 +30,43 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <TableView fx:id="book_view" layoutX="14.0" layoutY="160.0" prefHeight="420.0" prefWidth="1114.0">
-        <columns>
-            <TableColumn fx:id="bookId" prefWidth="75.0" text="ID" visible="false" />
-            <TableColumn fx:id="bookDateCal" prefWidth="231.199951171875" text="登録日付" />
-          <TableColumn fx:id="bookTitleCal" prefWidth="274.39997577667236" text="タイトル" />
-          <TableColumn fx:id="bookImageCal" prefWidth="610.3999633789062" text="表紙" />
-            <TableColumn prefWidth="75.0" text="トピック" visible="false" />
-        </columns>
-      </TableView>
-      <Button layoutX="103.0" layoutY="126.0" mnemonicParsing="false" text="削除" />
-      <Button layoutX="14.0" layoutY="126.0" mnemonicParsing="false" text="新規登録" />
+      <Button fx:id="newRegBtn" layoutX="35.0" layoutY="89.0" mnemonicParsing="false" onAction="#onNewRegBtn" text="新規登録" />
+      <ScrollPane layoutX="7.0" layoutY="122.0" prefHeight="511.0" prefWidth="119.0">
+         <content>
+            <FlowPane fx:id="bookFlowPane" prefHeight="510.0" prefWidth="118.0" vgap="10.0">
+               <opaqueInsets>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </FlowPane>
+         </content>
+      </ScrollPane>
+      <ImageView fx:id="BookImage" fitHeight="368.0" fitWidth="251.0" layoutX="136.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../../../Documents/movie/952203ada2d14610.jpg" />
+         </image>
+      </ImageView>
+      <Text fx:id="txtBookTitle" layoutX="136.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="タイトル" textAlignment="CENTER" visible="false" wrappingWidth="250.99998012185097" />
+      <Text fx:id="txtBookDate" layoutX="136.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="登録日：2020-03-02" visible="false" wrappingWidth="250.99998012185097" />
+      <WebView fx:id="bookTopic" layoutX="417.0" layoutY="120.0" prefHeight="481.0" prefWidth="685.0" visible="false" />
+      <HTMLEditor fx:id="bookTopicEdit" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="416.0" layoutY="122.0" prefHeight="475.0" prefWidth="686.0" visible="false" />
+      <ImageView fx:id="bookEdit" fitHeight="26.0" fitWidth="26.0" layoutX="136.0" layoutY="558.0" onMouseClicked="#onBookEdit" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@image/edit_24px.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="regBookTitle" layoutX="171.0" layoutY="126.0" visible="false" />
+      <DatePicker fx:id="regBookDate" layoutX="170.0" layoutY="165.0" prefHeight="26.0" prefWidth="168.0" visible="false" />
+      <Button fx:id="regBookImageBtn" layoutX="234.0" layoutY="571.0" mnemonicParsing="false" text="画像を選択" visible="false" />
+      <ImageView fx:id="regBookImage" fitHeight="368.0" fitWidth="251.0" layoutX="136.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../../../Documents/movie/952203ada2d14610.jpg" />
+         </image>
+      </ImageView>
+      <Button fx:id="btnReg" layoutX="152.0" layoutY="571.0" mnemonicParsing="false" text="登録" visible="false" />
+      <Button fx:id="btnRegNew" layoutX="152.0" layoutY="571.0" mnemonicParsing="false" onAction="#onBtnRegNew" text="追加登録" visible="false" />
+      <Button fx:id="deleteBtn" layoutX="327.0" layoutY="572.0" mnemonicParsing="false" onAction="#onDeleteBtn" text="削除" visible="false" />
    </children>
 </AnchorPane>
