--- a/kan's_log_system/src/application/Book.fxml
+++ b/kan's_log_system/src/application/Book.fxml
@@ -48,11 +48,11 @@
             <Image url="@../../../../../Documents/movie/952203ada2d14610.jpg" />
          </image>
       </ImageView>
-      <Text fx:id="txtBookTitle" layoutX="136.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="タイトル" textAlignment="CENTER" visible="false" wrappingWidth="250.99998012185097" />
+      <Text fx:id="txtBookTitle" layoutX="136.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="タイトル" visible="false" wrappingWidth="250.99998012185097" />
       <Text fx:id="txtBookDate" layoutX="136.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="登録日：2020-03-02" visible="false" wrappingWidth="250.99998012185097" />
       <WebView fx:id="bookTopic" layoutX="417.0" layoutY="120.0" prefHeight="481.0" prefWidth="685.0" visible="false" />
       <HTMLEditor fx:id="bookTopicEdit" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="416.0" layoutY="122.0" prefHeight="475.0" prefWidth="686.0" visible="false" />
-      <ImageView fx:id="bookEdit" fitHeight="26.0" fitWidth="26.0" layoutX="136.0" layoutY="558.0" onMouseClicked="#onBookEdit" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="bookEdit" fitHeight="25.0" fitWidth="20.0" layoutX="417.0" layoutY="92.0" onMouseClicked="#onBookEdit" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@image/edit_24px.png" />
          </image>
@@ -65,7 +65,7 @@
             <Image url="@../../../../../Documents/movie/952203ada2d14610.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btnReg" layoutX="152.0" layoutY="571.0" mnemonicParsing="false" text="登録" visible="false" />
+      <Button fx:id="btnReg" layoutX="152.0" layoutY="571.0" mnemonicParsing="false" onAction="#onBtnReg" text="登録" visible="false" />
       <Button fx:id="btnRegNew" layoutX="152.0" layoutY="571.0" mnemonicParsing="false" onAction="#onBtnRegNew" text="追加登録" visible="false" />
       <Button fx:id="deleteBtn" layoutX="340.0" layoutY="571.0" mnemonicParsing="false" onAction="#onDeleteBtn" text="削除" visible="false" />
    </children>
